--- a/src/Pages/adminLogin/adminlogin.css
+++ b/src/Pages/adminLogin/adminlogin.css
@@ -1,14 +1,15 @@
 .login-container {
     max-width: 400px;
-    margin: 0 auto; 
+    margin: 0 auto;
+    margin-top: 30px;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #f9f9f9;
-    text-align: center; 
 }
 
 .login-container h1 {
+    text-align: center;
     margin-bottom: 20px;
 }
 
@@ -20,10 +21,9 @@
 .login-container form {
     display: flex;
     flex-direction: column;
-    align-items: center; 
 }
 
-.login-container h4 {
+.login-container label {
     margin-bottom: 5px;
 }
 
@@ -32,8 +32,6 @@
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    width: 100%; 
-    max-width: 300px; 
 }
 
 .login-container button {
@@ -44,6 +42,7 @@
     color: white;
     cursor: pointer;
     width: 100px;
+    margin: 0 auto;
 }
 
 .login-container button:hover {
